link-shortener-project/kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: link-shortener-frontend
        image: nexusafzal/link-shortener-frontend:latest
        ports:
        - containerPort: 80
